# autonomy-pipeline

./: .gitignore  README.md  project_guide.md  technical_report.md
src/autonomy_pipeline/: package.xml  setup.cfg  setup.py
src/autonomy_pipeline/autonomy_pipeline/: fake_sensor_publisher.py  obstacle_grid_node.py
src/autonomy_pipeline/config/: params.yaml
src/autonomy_pipeline/launch/: autonomy_pipeline.launch.py
src/autonomy_pipeline/rviz/: autonomy.rviz
