<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomy_pipeline</name>
  <version>0.1.0</version>
  <description>
    Minimal reproducible Perception -> Mapping pipeline for a Jetson-class
    mobile robot. Track A submission for the Automation Expert Intern task.
    Subscribes to LiDAR and odometry and publishes a local occupancy grid
    plus obstacle markers. Includes a synthetic sensor publisher so the
    pipeline runs end-to-end with no hardware.
  </description>
  <maintainer email="candidate@example.com">candidate</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>python3-numpy</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
